revert changes for Java8